fixed overlapping

--- a/style.css
+++ b/style.css
@@ -332,9 +332,20 @@ section {
 
 article {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 10rem;
   justify-content: space-around;
   gap: 0.5rem;
+  text-align: center;
+}
+
+article h3 {
+  margin: 0;
+}
+
+article p {
+  margin: 0;
 }
 
 article .icon {
@@ -344,6 +355,7 @@ article .icon {
 /*PROJECT SECTION*/
 #projects {
   position: relative;
+  margin: 8rem 10rem;
 }
 
 .color-container {
